--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.3",
+    "@reduxjs/toolkit": "^2.2.7",
     "classnames": "^2.5.1",
     "install": "^0.13.0",
     "npm": "^10.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
