--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@uidotdev/usehooks": "^2.4.1",
     "classnames": "^2.5.1",
     "install": "^0.13.0",
     "npm": "^10.8.2",
